# circle-ci-git-submodules

./: .gitmodules  CHANGELOG.md  Main.hs  circle-ci-git-submodules.cabal  stack.yaml
.circleci/: config.yml
